Mapped components to associated routes

--- a/src/app/components/layouts/navbar/navbar.component.html
+++ b/src/app/components/layouts/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <h1>Car Park Availability</h1>
+    <a routerLink="" class="brand-logo">Car Park Availability</a>
     <span class="example-spacer">
-      <a mat-button href="#">Check Availability</a>
-      <a mat-button href="#">Sign-in</a>
+      <a mat-button routerLink="/check-car-park">Check Availability</a>
+      <a mat-button routerLink="/login">Sign-in</a>
+      <a mat-button routerLink="/register">Register</a>
     </span>
-  
   </mat-toolbar-row>
 </mat-toolbar>
