--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
-<app-home></app-home>
+    <router-outlet></router-outlet>
+<!-- <app-home></app-home> -->
 <app-footer></app-footer>
 
