--- a/src/app/components/layouts/navbar/navbar.component.css
+++ b/src/app/components/layouts/navbar/navbar.component.css
@@ -22,3 +22,10 @@ h1 {
   text-align: right;
   padding-right: 2em;
 }
+
+.brand-logo {
+  font-size: 1.5em;
+  text-decoration: none;
+  font-weight: bolder;
+  color: #fff;
+}
