Added not found component for invalid routes

--- a/src/app/components/screens/home/home.component.html
+++ b/src/app/components/screens/home/home.component.html
@@ -6,7 +6,7 @@
         <div class="docs-header-headline">
             <h1 class="mat-h1">Car Park Availability Checking</h1>
             <h2>Realtime Car Park Availability Checking System</h2>
-            <button mat-flat-button color="primary">Check Availability</button>
+            <a mat-flat-button color="primary" routerLink="/check-car-park">Check Availability</a>
         </div>
     </div>
    
