Implemented not found component

--- a/src/app/components/screens/not-found/not-found.component.html
+++ b/src/app/components/screens/not-found/not-found.component.html
@@ -1,1 +1,13 @@
-<p>not-found works!</p>
+<header aria-label="Not Found"
+    class="docs-header-background" tabindex="-1"
+    style="outline: none;">
+
+    <div class="docs-header-section">
+        <div class="docs-header-headline">
+            <h1 class="mat-h1">404</h1>
+            <h2>You didn't break the internet but we can't find what you are looking for.</h2>
+            <a mat-flat-button color="primary" routerLink="">Take Me Home!</a>
+        </div>
+    </div>
+   
+</header>
