--- a/src/app/components/layouts/navbar/navbar.component.css
+++ b/src/app/components/layouts/navbar/navbar.component.css
@@ -23,9 +23,13 @@ h1 {
   padding-right: 2em;
 }
 
+.example-spacer > a {
+  color: #c2185b;
+}
+
 .brand-logo {
-  font-size: 1.5em;
+  font-size: xx-large;
   text-decoration: none;
   font-weight: bolder;
-  color: #fff;
+  color: #c2185b;
 }
