--- a/src/app/components/screens/login/login.component.html
+++ b/src/app/components/screens/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<div class="form-container form-card">
+    <h1>SIGN IN</h1>
+    <div>
+        <mat-form-field>
+            <input type="text" matInput placeholder="Email">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field>
+            <input type="password" matInput placeholder="Password">
+        </mat-form-field>
+    </div>
+    <div>
+        <button mat-stroked-button color="primary">LOGIN</button>
+    </div>
+    <div>
+        <a routerLink="/register">Not a member? Register here.</a>
+    </div>
+</div>
