--- a/src/app/components/screens/register/register.component.html
+++ b/src/app/components/screens/register/register.component.html
@@ -1,1 +1,36 @@
-<p>register works!</p>
+<div class="form-container form-card">
+    <h1>REGISTER</h1>
+    <div>
+        <mat-form-field>
+            <input type="text" matInput placeholder="Firstname">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field>
+            <input type="text" matInput placeholder="Lastname">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field>
+            <input type="email" matInput placeholder="Email">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field>
+            <input type="password" matInput placeholder="Password">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field>
+            <input type="password" matInput placeholder="Confirm Password">
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field>
+            <input type="text" matInput placeholder="Contact No.">
+        </mat-form-field>
+    </div>
+    <div>
+        <button mat-stroked-button color="primary">SIGN-ME-UP</button>
+    </div>
+</div>
