--- a/src/app/components/screens/login/login.component.html
+++ b/src/app/components/screens/login/login.component.html
@@ -1,19 +1,28 @@
-<div class="form-container form-card">
+<form class="form-container form-card" (ngSubmit)="onSubmit()">
     <h1>SIGN IN</h1>
     <div>
         <mat-form-field>
-            <input type="text" matInput placeholder="Email">
+            <input type="text" matInput  
+                placeholder="Email"
+                [(ngModel)]="email"
+                name="email" id="email" 
+            />
         </mat-form-field>
     </div>
     <div>
         <mat-form-field>
-            <input type="password" matInput placeholder="Password">
+            <input type="password" matInput 
+                placeholder="Password" 
+                [(ngModel)]="password"
+                name="password" id="password"
+            />
         </mat-form-field>
     </div>
     <div>
-        <button mat-stroked-button color="primary">LOGIN</button>
+        <button *ngIf="!showLoader" type="submit" mat-stroked-button color="primary">LOGIN</button>
+        <mat-spinner *ngIf="showLoader" diameter="50"></mat-spinner>
     </div>
     <div>
         <a routerLink="/register">Not a member? Register here.</a>
     </div>
-</div>
+</form>
