Wrapped up profile component

--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -29,3 +29,13 @@
 .name {
   font-size: 2em;
 }
+
+.info-container {
+  display: inline-flex;
+  align-items: center;
+}
+
+.info-container > i {
+  font-size: medium;
+  margin-left: 0.25em;
+}
