Implemented table binding

--- a/src/app/components/screens/car-park/car-park.component.html
+++ b/src/app/components/screens/car-park/car-park.component.html
@@ -9,7 +9,7 @@
 
     <ng-template #data>
         <app-profile [user]="user"></app-profile>
-        <app-car-park-table></app-car-park-table>
+        <app-car-park-table [CarParkData]="CarParkData"></app-car-park-table>
     </ng-template>
 </div>
 
