--- a/src/app/components/car-park-table/car-park-table.component.html
+++ b/src/app/components/car-park-table/car-park-table.component.html
@@ -1,38 +1,42 @@
 <div class="mat-elevation-z8">
 
+    <ng-container
+        *ngIf="isDataEmpty; then emptySection; else tableSection"
+    ></ng-container>
+
+    <ng-template #emptySection>
+        <p>No data to show.</p>
+    </ng-template>
+
+    <ng-template #tableSection>
+
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-    
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        <ng-container matColumnDef="total_lots">
+        <th mat-header-cell *matHeaderCellDef> Total Lots </th>
+        <td mat-cell *matCellDef="let element"> {{element.carpark_info[0].total_lots}} </td>
         </ng-container>
     
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <ng-container matColumnDef="lot_type">
+        <th mat-header-cell *matHeaderCellDef> Lot Type </th>
+        <td mat-cell *matCellDef="let element"> {{element.carpark_info[0].lot_type}} </td>
         </ng-container>
     
-        <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        <ng-container matColumnDef="lots_available">
+        <th mat-header-cell *matHeaderCellDef> Available Lots </th>
+        <td mat-cell *matCellDef="let element"> {{element.carpark_info[0].lots_available}} </td>
         </ng-container>
-    
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
-    
+        
+        <ng-container matColumnDef="carpark_number">
+            <th mat-header-cell *matHeaderCellDef> Car Park Number </th>
+            <td mat-cell *matCellDef="let element"> {{element.carpark_number}} </td>
+            </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
     </table>
 
     <mat-paginator
         [pageSizeOptions]="[20, 50, 100]" showFirstLastButtons></mat-paginator>
+    </ng-template>
 </div>
