--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <div>
+    <div layout="row" layout-align="center center">
       <p>Copyright &copy; 2021 Something,Inc. All rights reserved</p>
     </div>
   </footer>
