--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
+<main>
     <router-outlet></router-outlet>
-<!-- <app-home></app-home> -->
+</main>
 <app-footer></app-footer>
 
